# pkg/api/docs/swagger.yaml
@@ -78,6 +78,8 @@ definitions:
         type: string
       frontend_result:
         $ref: '#/definitions/github_com_bazilio91_sferra-cloud_pkg_proto.TreeNode'
+      frontend_result_flat:
+        $ref: '#/definitions/types.JSONValue'
       frontend_result_unrecognized:
         $ref: '#/definitions/types.JSONValue'
       id:
@@ -183,6 +185,7 @@ definitions:
     - 11
     - 12
     - 13
+    - 15
     type: integer
     x-enum-varnames:
     - Status_STATUS_CREATED
@@ -199,6 +202,7 @@ definitions:
     - Status_STATUS_RECOGNITION_FAILED_QUOTA
     - Status_STATUS_RECOGNITION_FAILED_PROCESSING
     - Status_STATUS_RECOGNITION_FAILED_TIMEOUT
+    - Status_STATUS_PROCESSING_COMPLETED
   github_com_bazilio91_sferra-cloud_pkg_proto.TreeNode:
     properties:
       accumulated_count:
@@ -218,6 +222,8 @@ definitions:
       name:
         type: string
       number:
+        type: string
+      parent_id:
         type: string
       spec:
         $ref: '#/definitions/github_com_bazilio91_sferra-cloud_pkg_proto.SpecificationRow'
